--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports: 
       - 80:8000
     volumes: 
-      - ./GeoLabServer:/home/App
+      - ./Server:/home/App
     restart: always
     environment: 
       - DB_HOST=db
