--- a/API/API/appsettings.json
+++ b/API/API/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=db;Port=5432;Database=postgres;User Id=postgres;Password=postgres;"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=postgres;User Id=postgres;Password=postgres;"
   }
 }
