--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,8 @@ services:
       sh -c "python manage.py wait_for_db &&
              python manage.py makemigrations download users message stations &&
              python manage.py migrate &&
+             python create_sql.py &&
+             python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
     depends_on: 
       - db
